...
    DIV("div", "ދިވެހި,", "div"),
    ET("et", "eesti keel", "et"),
    EL("el", "Ελληνικά", "el"),
    SUX("sux", "𒅴𒂠", "sux"),
    ENGLISH("english", "English", "en"),
    ANG("ang", "Eald Englisċ", "ang"),
    SPANISH("spanish", "Español", "es"),
    EO("eo", "Esperanto", "eo"),
    EU("eu", "Euskara", "eu"),
    FA("fa", "فارسی", "fa"),
    FILIPINO("filipino", "Filipino", "fil"),
    CHA("cha", "Finuʼ Chamorro", "cha"),
    FRENCH("french", "Français", "fr"),
...
